cmake_minimum_required(VERSION 3.26)
project(Atividade11_Ponteiros C)

set(CMAKE_C_STANDARD 11)

add_executable(Atividade11_Ponteiros Ex1.c
        ../Revisao-Prova3Bim/Ex4.c)
add_executable(Ex2 Ex2.c
        ../Revisao-Prova3Bim/Ex4.c)
add_executable(Ex3 Ex3.c
        ../Revisao-Prova3Bim/Ex4.c)
add_executable(Ex4 Ex4.c
        ../Revisao-Prova3Bim/Ex4.c)